- Fixed Detail bug for selected Author/Publications. If only a single Author or publication is selected, the vis will now correctly display it. Furthermore Both Author and Publication Filter can now be combined. note however that restricting the search to a not existing combination will show the selected Publication anyways. In that and all other cases in witch authors are hidden by other search criteria a notification is shown that should inform the user about it. - Fixed a bug for the bar chart that the y axis would not dynamically scale according to the actual maximum - Changed Zooming behaviour. Zooming will now always be centered. Furthermore zooming out is now possible. The combination ensures that the focus on the graph is never lost (which was the case before)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     color : #555555;
+    overflow-y: scroll;
 }
 
 .panel {
@@ -71,6 +72,10 @@ span.award {
     display:block;
     color :#e6550d;
     font-style:italic;
+}
+
+.notification {
+    fill :red;
 }
 
 .detailNode {
